<resources>
    <string name="app_name"> FIRST </string>
    <string name="welcome_to_first">Welcome to FIRST</string>
    <string name="sign_up_to_get_started">Sign up to get started</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="sign_in"> Sign In</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_services">Servicesctivity</string>
    <string name="title_activity_subscriptions">SubscriptionsActivity</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">" Sign Up"</string>
    <string name="hello">Hello,</string>
    <string name="user">User</string>
    <string name="my_subscriptions">My Subscriptions</string>
    <string name="available_services">Available Services</string>
    <string name="no_services_available">No services available</string>
    <string name="no_subscriptions_available">No subscriptions available</string>
    <string name="discount">DISCOUNT</string>
    <string name="subscribe">Subscribe</string>
    <string name="amount_paid">"Amount Paid: "</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>


</resources>